--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </p>
 
     <p class="referencia">
-      McKee, A.  Adendo à música do Unicórnio, 2012. Disponível em
-      http://en.wikipedia.org/wiki/The_Unicorn_(song)
+      McKee, A.  Adendo à música do Unicórnio, 2012.
+      <a href="http://en.wikipedia.org/wiki/The_Unicorn_(song)"> Disponível em http://en.wikipedia.org/wiki/The_Unicorn_(song) </a>      
     </p>
   </div>
 
